models/fashionNet_2/training_record/all_user/training_script/results/figures/visualization.log
  File "./visualization.py", line 171
    elif:
        ^
SyntaxError: invalid syntax
